replaced material-ui for blueprint.js

--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -572,9 +572,8 @@ td {
   margin-top: 15px;
 }
 .title {
-  font-weight: 200;
+  margin: 0;
   color: #000000 !important;
-  font-family: 'Helvetica Neue', sans-serif !important;
 }
 .scale-badge {
   margin-left: 0 !important;
