--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -548,7 +548,6 @@ td {
   overflow-y: scroll;
 }
 .source-row {
-  padding: 25px;
   word-wrap: break-word;
 }
 .hide {
@@ -558,7 +557,7 @@ td {
   margin: 0;
   padding: 0;
   position: absolute;
-  top: 56px;
+  top: 0px;
   width: 100%;
   bottom: 0;
 }
@@ -618,4 +617,73 @@ td {
   margin-bottom: 0;
   font-size: 21px;
   text-align: center;
+}
+
+.infodrawer-container
+  width 30em
+  position absolute
+  right 0px
+  top 0px
+  bottom: 0px
+  pointer-events none
+  display flex
+  flex-direction column
+  :global
+    .macrostrat-detail
+      margin: 15px 0px;
+      display: flex;
+      align-items: center;
+
+.expansion-children
+  margin-left 10px
+
+.infodrawer
+  pointer-events all
+  max-height 100%
+  max-width 100%
+  display flex
+  flex-direction column
+  padding 0
+  overflow hidden
+  header
+    padding 5px
+    display flex
+    flex-direction row
+    align-items: center
+    .spacer
+      flex-grow 1
+    .left-icon
+      padding 7px
+
+  .infodrawer-header
+    display flex
+    flex-direction row
+    align-items baseline
+    margin-right 1em
+
+
+.infodrawer-body
+  overflow-y scroll
+  flex-shrink 1
+
+.spacer
+  flex-grow 1
+
+.spinner{
+  margin: 10px;
+}
+
+@media screen and (max-width: 768px) {
+  .infodrawer{
+    max-height: 60%;
+    width: 100%;
+    border-radius: 0px;
+    position: absolute;
+    bottom: 0px;
+  }
+  .infodrawer-container{
+    width: 100vw;
+    height: 100vh;
+    z-index: 200;
+  }
 }
