--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -486,7 +486,6 @@ body, .main-container, #react, #app-holder {
 .info-content {
   z-index: 0;
   height: 100%;
-  margin-top: 40px;
   overflow-y: scroll;
 }
 .info-content {
@@ -546,6 +545,7 @@ td {
 }
 .feature-list-container {
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 .source-row {
   word-wrap: break-word;
