Infobox style fixes

--- a/src/map-interface/components/expansion-panel/main.module.styl
+++ b/src/map-interface/components/expansion-panel/main.module.styl
@@ -42,6 +42,9 @@
 
 .expansion-children
   padding 5px 10px 10px
+  .expansion-panel
+    margin-left -10px
+    margin-right -10px
 
 .expansion-panel-subtext
   font-size: 85%;
