--- a/src/map-interface/components/info-drawer/main.module.styl
+++ b/src/map-interface/components/info-drawer/main.module.styl
@@ -8,17 +8,15 @@
   pointer-events none
   display flex
   flex-direction column
-  :global
-    .macrostrat-detail
-      margin: 15px 0px;
-      display: flex;
-      align-items: center;
 
-.expansion-children
-  margin-left 10px
+.macrostrat-detail
+  margin: 0.25em 0px 0.5em;
+  display: flex;
+  align-items: center;
+
+
 
 .infodrawer
-  --panel-padding-h: 10px;
   pointer-events all
   max-height 100%
   max-width 100%
