--- a/src/map-interface/components/expansion-panel/main.module.styl
+++ b/src/map-interface/components/expansion-panel/main.module.styl
@@ -41,7 +41,7 @@
     flex-grow 1
 
 .expansion-children
-  padding 5px 10px 10px
+  padding 0 10px
   .expansion-panel
     margin-left -10px
     margin-right -10px
