Block map interaction until searchbar focus is lost

--- a/src/map-interface/map-page/main.module.styl
+++ b/src/map-interface/map-page/main.module.styl
@@ -19,6 +19,8 @@
   // Make sure we can still click
   // on map in background
   pointer-events none
+  &.searching
+    pointer-events: all
 
 :global(.bp3-panel-stack-view)
   position: relative;
