Getting worse before it gets better

--- a/src/map-interface/components/info-drawer/main.module.styl
+++ b/src/map-interface/components/info-drawer/main.module.styl
@@ -1,13 +1,5 @@
 
-.infodrawer-container
-  width 30em
-  position absolute
-  right 0px
-  top 0px
-  bottom: 0px
-  pointer-events none
-  display flex
-  flex-direction column
+
 
 .macrostrat-detail
   margin: 0.25em 0px 0.5em;
@@ -45,24 +37,12 @@
   overflow-y scroll
   flex-shrink 1
 
-.spacer
-  flex-grow 1
+
 
 .spinner{
   margin: 10px;
 }
 
-@media screen and (max-width: 768px) {
-  .infodrawer{
-    max-height: 60%;
-    width: 100%;
+@media screen and (max-width: 768px)
+  .infodrawer
     border-radius: 0px;
-    position: absolute;
-    bottom: 0px;
-  }
-  .infodrawer-container{
-    width: 100vw;
-    height: 100vh;
-    z-index: 200;
-  }
-}
