--- a/src/map-interface/map-page/main.module.styl
+++ b/src/map-interface/map-page/main.module.styl
@@ -4,6 +4,11 @@
   display flex
   flex-direction column
   position relative
+  &.mobile-bottom-search
+    .context-stack
+      display flex
+      order 1
+      flex-direction: column-reverse
 
 .main-ui
   flex-grow 1
@@ -27,6 +32,7 @@
 :global(.bp3-panel-stack-view)
   position: relative;
   overflow: unset
+
 
 
 // Rename left-stack to context-stack
@@ -62,6 +68,9 @@
 .map-view-container
   flex-grow 1
   position: relative
+
+.infodrawer-container
+  max-height: 60%
 
 :global
   #map {
