--- a/src/map-interface/map-page/main.module.styl
+++ b/src/map-interface/map-page/main.module.styl
@@ -6,18 +6,15 @@
   display flex
   flex-direction column
   position relative
-  &.mobile-bottom-search
-    .context-stack
-      display flex
-      order 1
-      flex-direction: column-reverse
+
 
 
 .main-ui
-  flex-grow 1
+  flex 1
   position: relative
   display flex
   flex-direction: column
+  max-height 100%
 
 .panels-overlay
   position absolute
@@ -36,7 +33,13 @@
   position: relative;
   overflow: unset
 
-
+.context-stack
+  display: flex
+  flex-direction: column
+  &>div
+    flex 1
+  &>.searchbar
+    flex 0
 
 // Rename left-stack to context-stack
 .left-stack
@@ -75,6 +78,9 @@
 .infodrawer-container
   max-height: 60%
 
+.searchbar-holder
+  margin-bottom 0.5em
+
 :global
   #map {
     position: absolute;
@@ -85,15 +91,18 @@
 
 
 // Mobile-first styling
-@media only screen and (max-width: 768px) {
-  /* For mobile phones: */
-  .panels-overlay{
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-  }
-}
+@media only screen and (max-width: 768px)
+  /* For mobile phones, we want to make the most of screen space... */
+
+  // Move the search bar and context panel to the bottom of the screen
+  .context-stack
+    display flex
+    order 1
+    flex-direction: column-reverse
+    max-height: 80%
+
+  .main-ui.detail-panel-open .searchbar
+    display none
 
 @media screen and (min-width: 768px)
   .infodrawer-container
