remove all pointer events from class

--- a/src/map-interface/map-page/main.module.styl
+++ b/src/map-interface/map-page/main.module.styl
@@ -20,7 +20,7 @@
   // on map in background
   pointer-events none
   &.searching
-    pointer-events: all
+    //pointer-events: all
 
 :global(.bp3-panel-stack-view)
   position: relative;
