Improve filter styles

--- a/src/styles/searchbar.styl
+++ b/src/styles/searchbar.styl
@@ -75,22 +75,22 @@
 // Should be maybe moved to a card-specific location
 
 .filter-names {
-  margin-top: 6px;
-  margin-bottom: 2px;
+  margin-bottom: 0px;
 }
 
-.filter-name-container{
-  display: flex;
-  justify-content: space-between;
-}
+.filter-name-container
+  display: flex
+  justify-content: space-between
+  align-items: center
+  &>*
+    margin-right: 0.5em
+  margin-right: -0.5em
 
-.filter-tongue{
+.filter-tongue {
   background-color: #def1ff;
-  padding: 5px;
-  padding-bottom: 7px;
+  padding: 4px 6px;
+  padding-top: 12px;
   margin: 5px;
-  max-width: 300px;
-  margin-bottom: 7px;
   margin-top: -9px;
 }
 
