--- a/src/map-interface/map-page/main.module.styl
+++ b/src/map-interface/map-page/main.module.styl
@@ -63,8 +63,11 @@ This stylesheet the overall application page layout.
     bottom: 0;
     left: 0;
     right: 0;
-    width: 100%;
   }
+
+  .mapboxgl-canvas-container
+    width: 100%
+    height: 100%
 
 
 /* For mobile phones, we want to make the most of screen space,
