Further improvements to styles

--- a/src/map-interface/map-page/main.module.styl
+++ b/src/map-interface/map-page/main.module.styl
@@ -59,6 +59,11 @@ This stylesheet the overall application page layout.
 .searchbar-holder
   margin-bottom 0.5em
 
+.list-button
+  border-radius: 4px
+  padding 0
+  margin-bottom 4px
+
 map-control()
   min-width: 22px
   min-height: 22px 
@@ -105,8 +110,7 @@ map-control()
     margin-bottom: 0.8em
     padding: 0
 
-  .mapboxgl-ctrl
-    .mapbox-ctrl-attrib-inner
+  .mapboxgl-ctrl .mapbox-ctrl-attrib-inner
       padding 0 10px
   // .mapboxgl-ctrl-attrib-button
   //   map-control()
