WIP updates to search interface styles

--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -9,6 +9,7 @@
   --accent-border-color: $gray5
   --accent-secondary-color: #EBF1F5
   --accent-secondary-hover-color: #F5F8FA
+  --box-horizontal-padding: 0.8em
 
 html, body
   height 100vh
