--- a/src/map-interface/components/expansion-panel/main.module.styl
+++ b/src/map-interface/components/expansion-panel/main.module.styl
@@ -1,4 +1,26 @@
 
+.panel-subhead
+  background-color: var(--accent-color)
+  padding 0.2em var(--box-horizontal-padding)
+  border-top 1px solid var(--accent-border-color)
+  border-bottom 1px solid var(--accent-border-color)
+  display flex
+  flex-direction row
+  position sticky
+  align-items: baseline;
+  z-index 1
+  top 0px
+  &>*
+    margin-right var(--box-horizontal-padding)
+    &:last-child
+      margin-right: 0
+  h1, h2, h3
+    font-family: Montserrat,sans-serif !important;
+    font-weight: 700;
+    margin 0.2em 0;
+  .title
+    flex-grow 1
+
 .expansion-panel
   padding 0
   flex-wrap: wrap;
@@ -12,33 +34,23 @@
     margin 0 calc(var(--panel-padding-h) * -1)
     .expansion-panel-header
       background-color var(--accent-secondary-color)
-      padding 5px
       cursor pointer
-      border-top 1px solid var(--accent-color)
-      border-bottom 1px solid var(--accent-color)
       &:hover
         background-color var(--accent-secondary-hover-color)
-      display flex
       padding 0.1em 0.5em
-      flex-direction row
       align-items center
 
+.expansion-summary-title-help
+  margin-left 5px;
+  :global(.bp3-icon)
+    margin-left 5px;
+
 .expansion-panel-header
-  border-top: 1px solid var(--accent-hover-color);
-  border-bottom 1px solid var(--accent-border-color)
-  background-color var(--accent-color)
-  padding 10px
-  z-index: 1;
-  position sticky
-  top 0px
   cursor pointer
   &:hover
     background-color var(--accent-hover-color)
-  display flex
-  flex-direction row
-  align-items center
-  .title
-    flex-grow 1
+  :global(.bp3-icon)
+    transform: translate(0,3px);
 
 .expansion-children
   padding 5px 10px
@@ -53,17 +65,6 @@
 :global
   .expansion-panel-root
     padding-left: 15px !important;
-
-  .expansion-summary-title
-    font-family: Montserrat,sans-serif !important;
-    font-weight: 700 !important;
-    margin-right: 10px !important;
-    padding-right: 0 !important;
-    display: flex;
-    align-items: baseline;
-
-  .expansion-summary-title-help
-    margin-left 5px;
 
   .expansion-panel-detail
     display: block !important;
