Fix webkit bug with space filling

--- a/src/map-interface/components/searchbar.styl
+++ b/src/map-interface/components/searchbar.styl
@@ -25,3 +25,14 @@
 
 .search-results-container
   flex-shrink 1
+
+.search-guidance
+  padding: 0 1em
+  h3
+    margin 1em 0 0.2em
+  ul
+    padding-left 1.2em
+    li:before
+      content: '–'
+      position: absolute
+      left: 0
