--- a/src/map-interface/map-page/main.module.styl
+++ b/src/map-interface/map-page/main.module.styl
@@ -5,7 +5,7 @@ This stylesheet the overall application page layout.
 .map-page
   height 100vh
   /* mobile viewport bug fix */
-  height: -webkit-fill-available;
+  max-height: -webkit-fill-available;
   width 100vw
   display flex
   flex-direction column
@@ -17,10 +17,12 @@ This stylesheet the overall application page layout.
   display flex
   flex-direction: column
   max-height 100%
+  height: 100%
 
 .context-stack
   display: flex
   flex-direction: column
+  max-height: 100%
   &>div
     flex-shrink 1
   &>.searchbar
@@ -30,7 +32,6 @@ This stylesheet the overall application page layout.
 
 .context-stack, .detail-stack
   z-index: 100
-
 
 .panel-container
   display flex
@@ -159,6 +160,7 @@ map-control()
   .context-stack
     max-width 34em
     min-width 14em
+    transition: width 1s ease
 
   .detail-stack
     width 30em
@@ -177,6 +179,8 @@ map-control()
     &>div
       pointer-events: all
       margin-bottom: 0.5em
+    &>div.spacer
+      pointer-events: none
 
   /* Make map fill page rather than containing div,
     by unsetting map position */
