--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -14,6 +14,7 @@
 html, body
   height 100vh
   height -webkit-fill-available
+  overflow hidden
 
 body {
   color: #333;
@@ -24,7 +25,7 @@ body {
 body, .main-container, #react, #app-holder {
   height: 100%;
   width: 100%;
-  min-height: -webkit-fill-available;
+  //min-height: -webkit-fill-available;
 }
 ::-webkit-scrollbar,
 *::-webkit-scrollbar {
