Don't move navbar to the bottom on mobile

--- a/src/map-interface/map-page/main.module.styl
+++ b/src/map-interface/map-page/main.module.styl
@@ -127,17 +127,16 @@ map-control()
   //   map-control()
 
 
-
 /* For mobile phones, we want to make the most of screen space,
  which in some cases means adding complications to the basic page. */
 @media only screen and (max-width: 768px)
 
   // Move the search bar and context panel to the bottom of the screen
-  .context-stack
-    display flex
-    order 1
-    flex-direction: column-reverse
-    max-height: 80%
+  // .context-stack
+  //   display flex
+  //   order 1
+  //   flex-direction: column-reverse
+  //   max-height: 80%
 
   .main-ui.detail-panel-open .searchbar
     display none
