Add a resize observer to improve map sizing

--- a/src/map-interface/map-page/main.module.styl
+++ b/src/map-interface/map-page/main.module.styl
@@ -138,9 +138,11 @@ map-control()
   //   flex-direction: column-reverse
   //   max-height: 80%
 
+  // Hide searchbar when infodrawer is open
   .main-ui.detail-panel-open .searchbar
     display none
 
+  // Make sure that our detail panel doesn't take up the entirety of the page
   .detail-stack
     max-height: 70%
 
