Allow elevation profile and ui to be shown at same time

--- a/src/map-interface/map-page/main.module.styl
+++ b/src/map-interface/map-page/main.module.styl
@@ -153,6 +153,7 @@ map-control()
   .main-ui
     flex-direction row
     padding 1em 1em 2em
+    min-height: 80px
     &>*
       margin-right 0.5em
       &:last-child
