--- a/src/map-interface/components/info-drawer/main.module.styl
+++ b/src/map-interface/components/info-drawer/main.module.styl
@@ -5,12 +5,11 @@
   display: flex;
   align-items: center;
 
-
-
 .infodrawer
   pointer-events all
   max-height 100%
   max-width 100%
+  height fit-content
   display flex
   flex-direction column
   padding 0
@@ -31,6 +30,10 @@
     align-items baseline
     margin-right 1em
 
+  // &.loading
+  //   max-height: 200px
+  // max-height: calc(100vh - 60px)
+  // transition: max-height 0.5s ease-in-out 0.25s
 
 .infodrawer-body
   overflow-y scroll
@@ -40,9 +43,10 @@
   flex-grow 1
   pointer-events none
 
-.spinner{
-  margin: 10px;
-}
+.spinner
+  margin: 10px
+
+
 
 @media screen and (max-width: 768px)
   .infodrawer
