Fixed animation for context stack

--- a/src/map-interface/map-page/main.module.styl
+++ b/src/map-interface/map-page/main.module.styl
@@ -143,9 +143,9 @@ map-control()
   :global(.mapbox-control.mapbox-zoom)
     display: none
 
-.main-ui.searching
-  .map-view-container
-    pointer-events: none
+// .main-ui.searching
+//   .map-view-container
+//     pointer-events: none
 
 :global(.mapbox-control.mapbox-zoom)
   background: rgba(255,255,255,0.2)
