--- a/src/map-interface/components/transitions/main.module.styl
+++ b/src/map-interface/components/transitions/main.module.styl
@@ -9,3 +9,29 @@
   &:global(.exit-active)
     opacity: 0
     transition: opacity 0.5s ease-in-out !important
+  transition: height 0.5s
+
+.transition-item.spinner
+  position absolute
+  top 0
+  left 0
+  width: 100%
+  height 100%
+  min-height: 80px
+  :global(.bp3-spinner)
+    padding: 15px
+  &:global(.enter)
+    height: 0
+    opacity: 0
+  &:global(.enter-active)
+    height: 80px
+    opacity: 1
+    transition: height 0.2s ease-in, opacity 0.2s ease-in !important
+  &:global(.exit)
+    height: 80px
+    opacity: 1
+  &:global(.exit-active)
+    opacity: 0
+    transition: height 0.3s ease-in, opacity 0.2s ease-in !important
+
+//.transition-item.infodrawer-info
