--- a/src/map-interface/components/transitions/main.module.styl
+++ b/src/map-interface/components/transitions/main.module.styl
@@ -18,6 +18,7 @@
   width: 100%
   height 100%
   min-height: 80px
+  background-color: rgba(255, 255, 255, 0.8)
   :global(.bp3-spinner)
     padding: 15px
   &:global(.enter)
