--- a/src/map-interface/components/transitions/main.module.styl
+++ b/src/map-interface/components/transitions/main.module.styl
@@ -1,15 +1,18 @@
-.transition-item
+transitionable()
   &:global(.enter)
     opacity: 0
   &:global(.enter-active)
     opacity: 1
-    transition: opacity 0.5s ease-in-out !important
+    transition: opacity 0.5s ease-in-out, height 0.5s ease-in-out, max-height 0.5s ease-in-out
   &:global(.exit)
     opacity: 1
   &:global(.exit-active)
     opacity: 0
-    transition: opacity 0.5s ease-in-out !important
-  transition: height 0.5s
+    transition: opacity 0.5s ease-in-out, height 0.5s ease-in-out, max-height 0.5s ease-in-out
+  transition: height 0.5s ease-in-out, max-height 0.5s ease-in-out
+
+.transition-item
+  transitionable()
 
 .transition-item.spinner
   position absolute
@@ -17,7 +20,7 @@
   left 0
   width: 100%
   height 100%
-  min-height: 80px
+  min-height: 90px
   background-color: rgba(255, 255, 255, 0.8)
   :global(.bp3-spinner)
     padding: 15px
@@ -25,14 +28,14 @@
     height: 0
     opacity: 0
   &:global(.enter-active)
-    height: 80px
+    height: 90px
     opacity: 1
-    transition: height 0.2s ease-in, opacity 0.2s ease-in !important
+    transition: height 0.2s ease-in, opacity 0.2s ease-in
   &:global(.exit)
-    height: 80px
+    height: 90px
     opacity: 1
   &:global(.exit-active)
     opacity: 0
-    transition: height 0.3s ease-in, opacity 0.2s ease-in !important
+    transition: height 0.3s ease-in, opacity 0.2s ease-in
 
 //.transition-item.infodrawer-info
