--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -168,7 +168,9 @@ body, .main-container, #react, #app-holder {
 }
 .age-chip {
   text-align: center;
-  padding: 10px;
+  padding: 5px;
+  margin-right: 0.2em;
+  margin-bottom: 0.2em;
   border-radius: 5px;
   display: inline-block;
 }
