--- a/src/map-interface/map-page/main.module.styl
+++ b/src/map-interface/map-page/main.module.styl
@@ -139,7 +139,7 @@ map-control()
   // .mapboxgl-ctrl-attrib-button
   //   map-control()
 
-.map-page.detail-panel-open
+.main-ui.detail-panel-open
   :global(.mapbox-control.mapbox-zoom)
     display: none
 
@@ -162,7 +162,7 @@ map-control()
   //   max-height: 80%
 
   // Hide searchbar when infodrawer is open
-  .map-page.detail-panel-open .searchbar
+  .main-ui.detail-panel-open .searchbar
     display none
 
   // Make sure that our detail panel doesn't take up the entirety of the page
@@ -191,9 +191,8 @@ map-control()
       margin-right 0.5em
       &:last-child
         margin-right 0
-
-  .map-page.searching .context-stack
-    width: 24em
+    &.searching .context-stack
+      width: 24em
 
 
   .context-stack
