Simplify transition classes

--- a/src/map-interface/map-page/main.module.styl
+++ b/src/map-interface/map-page/main.module.styl
@@ -169,6 +169,7 @@ map-control()
   .detail-stack
     height: fit-content
     position: inherit
+    max-height: 70%
 
   // Completely hide zoom control
   :global(.mapbox-control.mapbox-zoom)
