Fix sloppy code for age chips

--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -22,7 +22,7 @@ body {
   padding:0;
   font-family: 'Source Sans Pro', sans-serif;
 }
-body, .main-container, #react, #app-holder {
+body, .main-container {
   height: 100%;
   width: 100%;
   //min-height: -webkit-fill-available;
@@ -168,8 +168,9 @@ body, .main-container, #react, #app-holder {
 }
 .age-chip {
   text-align: center;
-  padding: 10px;
+  padding: 6px;
   border-radius: 5px;
+  margin: 0px 4px 4px 0;
   display: inline-block;
 }
 .age-chip-age {
