--- a/src/map-interface/map-page/transitions.module.styl
+++ b/src/map-interface/map-page/transitions.module.styl
@@ -1,13 +1,33 @@
-$transition(container_class, child_class)
-  {container_class}
-    {child_class}
-      transition: opacity 0.5s ease-in-out, height 0.5s ease-in-out, max-height 0.5s ease-in-out
-    &{child_class}-from {child_class}
-      opacity: 0
-    &{child_class}-enter {child_class}
-      opacity: 1
-    &{child_class}-leave {child_class}
-      opacity: 0
+core_transition=opacity 0.5s ease-in-out, height 0.5s ease-in-out, max-height 0.5s ease-in-out
 
-$transition('.main-ui', '.detail-panel')
-$transition('.main-ui', '.context-panel')
+opacity-transition-core(child_class, prefix)
+  {child_class}
+    transition: core_transition
+  &{prefix}from {child_class}
+    opacity: 0
+  &{prefix}enter {child_class}
+    opacity: 1
+  &{prefix}leave {child_class}
+    opacity: 0
+
+opacity-transition(child_class)
+  opacity-transition-core(child_class, child_class + '-')
+
+height-transition(child_class, prefix)
+  {child_class}
+    transition: core_transition
+  &{prefix}from {child_class}
+    max-height: 0
+    height: 0
+  &{prefix}leave {child_class}
+    max-height: 0
+    max-height: 0
+
+.main-ui
+  opacity-transition('.detail-panel')
+  opacity-transition('.context-panel')
+
+@media only screen and (max-width: 768px)
+  .main-ui
+    height-transition('.detail-stack', '.detail-panel-')
+    height-transition('.context-panel', '.context-panel-')
