Lengthen key transitions

--- a/src/map-interface/map-page/transitions.module.styl
+++ b/src/map-interface/map-page/transitions.module.styl
@@ -1,4 +1,4 @@
-core_transition=opacity 0.5s ease-in-out, height 0.5s ease-in-out, max-height 0.5s ease-in-out
+core_transition=opacity 0.8s ease, height 0.8s ease, max-height 0.8s ease
 
 opacity-transition-core(child_class, prefix)
   {child_class}
