--- a/src/map-interface/components/transitions/main.module.styl
+++ b/src/map-interface/components/transitions/main.module.styl
@@ -14,28 +14,36 @@ transitionable()
 .transition-item
   transitionable()
 
-.transition-item.spinner
-  position absolute
-  top 0
-  left 0
-  width: 100%
-  height 100%
-  min-height: 90px
-  background-color: rgba(255, 255, 255, 0.8)
-  :global(.bp3-spinner)
-    padding: 15px
-  &:global(.enter)
-    height: 0
-    opacity: 0
-  &:global(.enter-active)
-    height: 90px
-    opacity: 1
+.loading-area
+  position: relative
+  .spinner, .data
     transition: height 0.2s ease-in, opacity 0.2s ease-in
-  &:global(.exit)
-    height: 90px
-    opacity: 1
-  &:global(.exit-active)
-    opacity: 0
-    transition: height 0.3s ease-in, opacity 0.2s ease-in
+  .spinner
+    position absolute
+    top 0
+    left 0
+    width: 100%
+    height 100%
+    min-height: 90px
+    background-color: rgba(255, 255, 255, 0.8)
+    padding: 15px
+  &.enter
+    .spinner
+      height: 0
+      opacity: 0
+    .data
+      opacity: 1
+  &.from
+    .spinner
+      height: 90px
+      opacity: 1
+    .data
+      opacity: 0
+  &.leave
+    .spinner
+      height: 90px
+      opacity: 1
+    .data
+      opacity: 0
 
 //.transition-item.infodrawer-info
