--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -1,4 +1,4 @@
-@require "../../packages/ui-components/src/shared/colors"
+@require "~/deps/ui-components/packages/ui-components/src/shared/colors"
 
 *
   box-sizing border-box
