--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -446,6 +446,16 @@ td {
   overflow-y: scroll;
   overflow-x: hidden;
 }
+
+.infodrawer-container-sources{
+  width: 30em;
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  bottom: 0px;
+  pointer-events: none;
+}
+
 .source-row {
   word-wrap: break-word;
 }
@@ -455,9 +465,9 @@ td {
 .index-map-container {
   margin: 0;
   padding: 0;
-  position: absolute;
   top: 0px;
   width: 100%;
+  height: 100vh;
   bottom: 0;
 }
 
