rename suggest, bp3 style global; col build skeleton

--- a/column-builder/styles/globals.scss
+++ b/column-builder/styles/globals.scss
@@ -33,3 +33,8 @@ a {
   justify-content: center;
   align-items: center;
 }
+.bp3-menu {
+  max-height: 200px;
+  max-width: 400px;
+  overflow: auto;
+}
