--- a/column-builder/src/components/comp.module.scss
+++ b/column-builder/src/components/comp.module.scss
@@ -2,6 +2,15 @@
   overflow: scroll;
   max-height: 200px;
 }
+.itemSelectPopover {
+  padding: 5px;
+  background-color: white;
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
+  ::-webkit-scrollbar {
+    display: none; /* Safari and Chrome */
+  }
+}
 .interval-row {
   display: flex;
   justify-content: space-between;
