more options for components and bug fixes

--- a/column-builder/src/components/comp.module.scss
+++ b/column-builder/src/components/comp.module.scss
@@ -52,5 +52,11 @@
   overflow-y: scroll;
 }
 .tag {
-  margin: 5px;
+  margin: 1px;
+}
+.interval-cell-min-editor {
+  display: flex;
+  flex-direction: column;
+  height: 8em;
+  justify-content: space-between;
 }
