--- a/src/map-interface/components/card.module.styl
+++ b/src/map-interface/components/card.module.styl
@@ -21,10 +21,11 @@
     display: flex
     align-items: center
     .spacer
-      flex-grow 1
+      flex-grow 0.01
   .card-header-left
-    flex-grow 1
     justify-content: flex-start
+    flex 1
+    min-width: 0
   .card-header
     justify-content space-between
     padding 5px
