--- a/src/map-interface/map-page/main.module.styl
+++ b/src/map-interface/map-page/main.module.styl
@@ -59,6 +59,22 @@ This stylesheet the overall application page layout.
   padding 0
   margin-bottom 4px
 
+// Menu
+.buttons
+  display: flex
+  flex-direction: row
+  flex: 1
+  min-width: 0
+
+.tab-button
+  flex-shrink: 1
+  min-width: 40px
+  overflow: hidden
+  text-align: right
+  :global(.bp3-button-text)
+    transition all 0.2s
+    transition-delay 0.1s
+
 .menu-card
   :global(.bp3-panel-stack2)
     overflow: unset
@@ -66,6 +82,11 @@ This stylesheet the overall application page layout.
     border-right: 0
     position: relative;
     overflow: unset
+  &.layers .tab-button:not(:hover)
+    :global(.bp3-button-text)
+      width 0
+      opacity: 0
+      margin-left: -7px
 
 .menu-content
   display flex
