types and styles

--- a/column-builder/src/components/comp.module.scss
+++ b/column-builder/src/components/comp.module.scss
@@ -60,3 +60,13 @@
   height: 8em;
   justify-content: space-between;
 }
+.nomargin {
+  margin-bottom: 0px;
+}
+.margin-bottom-spacing {
+  margin-bottom: 20px;
+}
+.map-container {
+  height: 200px;
+  width: 100%;
+}
