style changes and type safe event

--- a/column-builder/src/components/comp.module.scss
+++ b/column-builder/src/components/comp.module.scss
@@ -99,3 +99,11 @@
   display: flex;
   justify-content: space-between;
 }
+
+.unit-section-tables {
+  width: 75%;
+}
+.unit-section-container {
+  display: flex;
+  justify-content: center;
+}
