--- a/column-builder/src/components/comp.module.scss
+++ b/column-builder/src/components/comp.module.scss
@@ -107,3 +107,12 @@
   display: flex;
   justify-content: center;
 }
+.btwn-row-btn {
+  height: 10px;
+  width: 100%;
+  margin: -10px 0%;
+  padding-top: 5px;
+  &:hover {
+    cursor: pointer;
+  }
+}
