styles and parsing common logic

--- a/column-builder/src/components/comp.module.scss
+++ b/column-builder/src/components/comp.module.scss
@@ -106,6 +106,7 @@
 .unit-section-container {
   display: flex;
   justify-content: center;
+  margin-top: 10px;
 }
 .btwn-row-btn {
   height: 10px;
