section tables are mergable by drag and drop action

--- a/column-builder/src/components/comp.module.scss
+++ b/column-builder/src/components/comp.module.scss
@@ -117,3 +117,11 @@
     cursor: pointer;
   }
 }
+
+.base-table {
+  border: solid 1px;
+  border-color: #c5cbd3;
+  margin: 10px;
+  background-color: white;
+  border-radius: 5px;
+}
