visual for if unit was moved

--- a/column-builder/src/components/comp.module.scss
+++ b/column-builder/src/components/comp.module.scss
@@ -108,6 +108,11 @@
   justify-content: center;
   margin-top: 10px;
 }
+
+.unit-moved {
+  box-shadow: -6px 0px 0px 0px #10b146;
+}
+
 .btwn-row-btn {
   height: 10px;
   width: 100%;
