Added a swatch for version info

--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -9,6 +9,8 @@
   --accent-border-color: $gray5
   --accent-secondary-color: #EBF1F5
   --accent-secondary-hover-color: #F5F8FA
+  --ui-color-accent: rgb(252, 217, 250)
+  --ui-color-accent-text: rgb(143, 39, 138)
   --box-horizontal-padding: 0.8em
 
 html, body
