--- a/src/map-interface/components/docs.module.styl
+++ b/src/map-interface/components/docs.module.styl
@@ -1,6 +1,31 @@
 :global
   video
     max-width: 70%
-    margin 0 auto
+    margin 0.5em auto 1em
     border-radius: 6px
     box-shadow: 0 0 6px rgba(0, 0, 0, 0.4)
+
+.new-swatch
+  font-size 0.8em
+  font-weight 400
+  display inline-block
+  padding: 0.25em 0.5em
+  margin 0 0.5em
+  border-radius: 4px
+  font-style italic
+  background-color: var(--ui-color-accent)
+  color: var(--ui-color-accent-text)
+
+.version
+  .version-name
+    display inline-block
+    padding: 0.25em 0.5em
+    margin-right 0.5em
+    border-radius: 4px
+    background-color: var(--ui-color-accent)
+    color: var(--ui-color-accent-text)
+    code
+      font-size 0.9em
+      font-weight: 400
+  .date
+    font-style italic
